Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@939 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/XmlScenario.wiki
+++ b/wiki/XmlScenario.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-The main input to the simulator is an [http://www.w3schools.com/xml/default.asp XML] file traditionally called `scenario.xml` (though it may be named something different if the `--scenario FILE` command-line option is passed to openmalaria). This has many sections, described here. Additionally the file contents are described in a more technical (and probably more complete) way by the [http://www.w3schools.com/schema/default.asp XSD] schema [http://code.google.com/p/openmalaria/source/browse/trunk/model/scenario.xsd file].
+The main input to the simulator is an [http://www.w3schools.com/xml/default.asp XML] file generally called `scenario.xml` (though it may be named something different if the `--scenario FILE` command-line option is passed to openmalaria). This has several sections, described here.   The file contents are described in a more technical (and probably more complete) way by the [http://www.w3schools.com/schema/default.asp XSD] schema [http://code.google.com/p/openmalaria/source/browse/trunk/model/scenario.xsd file].
 
 === Scope of documentation ===
 
@@ -96,42 +96,42 @@ The `interventions` element is organized informally into three sections, first d
 
 Intervention descriptions are, at this time, all direct sub-elements of `interventions` and not some other element.
 
-The `MDADescription` element is only required when using _Mass Drug Administration_ interventions on a one-day timestep. It can then take a `schedule` sub-element describing a treatment dose or schedule taken by individuals covered by the administration campaign. There are currently no adherence/dose size/quality effects varying this; i.e. individuals either are not covered by the campaign and recieve nothing or are and recieve the full schedule.
+The `MDADescription` element is only required when using _Mass Drug Administration_ interventions on a one-day timestep. It can then take a `schedule` sub-element describing a treatment dose or schedule taken by individuals covered by the administration campaign. There are currently no adherence/dose size/quality effects varying this; i.e. individuals either are not covered by the campaign and receive nothing or are and receive the full schedule.
 
-The `vaccineDescription` element describes vaccination campaigns.
+The `vaccineDescription` element describes vaccines.
 
-The `iptiDescription` describes _Intermittent Preventative Treatment for Infants_ campaigns.
+The `iptiDescription` describes _Intermittent Preventive Treatment for Infants_ .
 
-The `anopheles` element, if used, should be listed for each mosquito sub-species (using the `mosquito` attribute to associate with one of the mosquito species specified in entomological data). Each may contain descriptions for _Insecticide Treated Net_ (`ITNDescription`), _Indoor Residual Spraying_ (`IRSDescription`) and a mosquito repellant (`VADescription` — _Vector Availability_) intervention. Theses have sub-elements describing a parameter as a Weibull decay curve. All three have a `deterrency` parameter; additionally `ITNDescription` has `preprandialKillingEffect` and `postprandialKillingEffect` (chance of killing a mosquito before or after feeding) and `IRSDescription` has `killingEffect` (chance of killing mosquito while resting) parameters.
+The `anopheles` element, if used, should be listed for each mosquito species (using the `mosquito` attribute to associate with one of the mosquito species specified in entomological data). Each may contain descriptions for _Insecticide Treated Net_ (`ITNDescription`), _Indoor Residual Spraying_ (`IRSDescription`) and a mosquito repellant (`VADescription` — _Vector Availability_) intervention. Theses have sub-elements describing a parameter as a Weibull decay curve. All three have a `deterrency` parameter; additionally `ITNDescription` has `preprandialKillingEffect` and `postprandialKillingEffect` (chance of killing a mosquito before or after feeding) and `IRSDescription` has `killingEffect` (chance of killing mosquito while resting) parameters.
 
 === Continuous ===
 
 Interventions with continuous deployment are described by a `continuous` element. This accepts sub-elements `vaccine`, `ITN` and `ipti` (see descriptions above); these may occur more than once. (They must be listed in order of type; that is all `vaccine` elements before any `ITN` elements, etc.)
 
-Each of these has the same type: a `targetAgeYrs` attribute and a `coverage` attribute. Every individual has a chance (equal to `coverage`) of recieving this intervention when they reach age `targetAgeYrs` (needn't be an integer).
+Each of these has the same type: a `targetAgeYrs` attribute and a `coverage` attribute. Every individual has a probability (equal to `coverage`) of receiving this intervention when they reach age `targetAgeYrs` in years (need not be an integer).   
 
 === Timed ===
 
-Timed interventions are usually mass campaigns of some sort. The `timed` element accepts a list of `intervention` sub-elements, each of which describes interventions occuring at a time specified by its `time` attribute. The following interventions may occur (and should be listed in this order within each `intervention`):
+Timed interventions correspond to mass deployment at a specific time point. The `timed` element accepts a list of `intervention` sub-elements, each of which describes interventions occuring at a time specified by its `time` attribute. The following interventions may occur (and should be listed in this order within each `intervention`):
 
 || `changeHS` || Replaces the current health-system description with a new one. Must be a complete description of the health system. ||
 || `changeEIR` || Replaces EIR data with new, daily, data described here. Data must be sufficient to last until the end of the simulation. ||
 || `importedInfectionsPerThousandHosts` || Not an intervention, but deployed the same way: a floating-point number describing the chance each individual recieves an infection (hence number introduced is unlikely to be exactly the number specified) ||
-|| `MDA` || Mass drug administration (clears infections directly on 5-day timestep and administers drugs on a 1-day timestep) ||
+|| `MDA` || Mass drug administration (clears infections directly for models with a 5-day timestep and administers drugs for models with a 1-day timestep) ||
 || `vaccinate` || Mass vaccination campaign ||
-|| `ITN` || Mass ITN-deployment campaign ||
-|| `IRS` || Mass house-spraying campaign ||
-|| `VectorAvailability` || Mass mosquito-repellent deployment campaign ||
+|| `ITN` || Mass ITN-deployment ||
+|| `IRS` || IRS spray round ||
+|| `VectorAvailability` || Mass mosquito-repellent deployment (e.g. house spraying) ||
 || `ipti` || Mass IPTi campaign ||
 || `larviciding` || Mosquito emergence-rate reduction intervention. Has an `anopheles` sub-element for each mosquito sub-species, containing the attributes: `mosquito` (name of sub-species), `effectiveness` (proportional reduction in mosquito emergence), `duration` (number of days the intervention is effective for). ||
 
-The `MDA` through to `ipti` interventions above are all mass campaigns. Each has its deployment described by the following attributes: `maxAge` and `minAge` describe the age-range applicable (optional; they default to 100 and 0 respectively), and `coverage` specifies the chance that each individual is covered by the campaign.
+The `MDA` through to `ipti` interventions above are all mass deployment. Each has its deployment described by the following attributes: `maxAge` and `minAge` describe the age-range applicable in years (optional; they default to 100 and 0 respectively), and `coverage` specifies the chance that each individual receives the intervention.
 
 == Health system ==
 
 == Entomological data ==
 
-Entomological data is described by the `entoData` element — this can have either a `vector` or a `nonVector` sub-element (which determines which transmission model to use as well as providing data).
+Entomological data are described by the `entoData` element — this can have either a `vector` or a `nonVector` sub-element (which determines which transmission model to use as well as providing data).
 
 The `entoData` element also has two attributes: `name` (just a user-friendly name), and `mode`. The `mode` parameter determines which transmission mode to enter at the start of the intervention period: 2 to enforce fixed EIR or 4 to allow dynamic simulations where human infectiousness has a feed-back effect on EIR (the usual choice). (For more info on `mode`, see `enum SimulationMode` in [http://code.google.com/p/openmalaria/source/browse/trunk/include/Transmission/TransmissionModel.h TransmissionModel.h].)
 
@@ -139,9 +139,9 @@ The `entoData` element also has two attributes: `name` (just a user-friendly nam
 
 === Non-vector parameters ===
 
-The `nonVector` element primarily consists of a list of daily EIR parameters (`EIRDaily` elements). These specify the EIR per day of the year for the pre-intervention equilibrium state. Where data for more than one year is provided, it is simply averaged for each day of the year.
+The `nonVector` element primarily consists of a list of daily EIR (_Entomological Inoculation Rate_) parameters (`EIRDaily` elements). These specify the EIR per day of the year for the pre-intervention equilibrium state. Where data for more than one year are provided, they are simply averaged for each day of the year.
 
-`nonVector` also has an `eipDuration` attribute: the extrinsic incubation period (sporozoite development time, in days), which determines the delay before changes in human infectiousness affect the EIR (in dynamic mode only).
+`nonVector` also has an `eipDuration` attribute: the _extrinsic incubation period_ (sporozoite development time, in days), which determines the delay before changes in human infectiousness affect the EIR (in dynamic mode only).
 
 == Drug parameters ==
 
@@ -169,9 +169,9 @@ The `parameters` element describes a list of parameters which are fitted. Usuall
 
 A list of which parameters may be specified can be found here: [http://code.google.com/p/openmalaria/source/browse/trunk/include/inputData.h inputData.h] (the numbers, rather than names, are used to specify each parameter in scenario files).
 
-This element also contains some attributes (here for historical reasons):
+This element also contains some attributes (here for historical reasons (TODO: are these only historical reasons?):
 
  *  `interval` — number of days in a time-step
  *  `iseed` — number to seed random-number-generator with
  *  `delta` — unused
- *  `latentp` — number of timesteps by which blood-stage infection is delayed in descriptive infection model (should apply to other models?)
+ *  `latentp` — number of timesteps by which blood-stage infection is delayed in descriptive infection model (TODO: should apply to other models)
