Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@945 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/MacBuildOpenMalaria.wiki
+++ b/wiki/MacBuildOpenMalaria.wiki
@@ -31,7 +31,7 @@ In the terminal, under the _ Linking CXX executable openMalaria _ message you wi
 
 you should Copy this and add * -framework Carbon *, paste it, and finally execute it. 
 
-You should have now a working static build. 
+Finally you should have a working static build. 
 
 == Xcode ==
 
