--- a/wiki/MacBuildOpenMalaria.wiki
+++ b/wiki/MacBuildOpenMalaria.wiki
@@ -8,38 +8,23 @@ Additionally, you should install [http://python.org/download/ python 2.6] (just 
 
 = Backward compatibility =
 
-To force building against a particular macosx version (run this before all the builds):
-
-export MACOSX_DEPLOYMENT_TARGET=10.4
+In CMake you have to specify the older SDK version you would like to use to ensure backward compatibility.
+Please beware of the fact that boinc won't be usable with SKDs < 10.3.9.
+You have to use the flag CMAKE_OSX_SYSROOT to specify which SDK you would like to use.
 
 = Building =
 
 After checking out the sources, you have two options to build openmalaria (at least, two that have been tested):
- * Use Xcode (see below): This is the easiest option. However we haven't worked out how to  statically link the xerces library. Therefore *this doesn't work for a boinc deploy*.
+ * Use Xcode (see below)
  * Use Makefiles (see the [UnixBuildOpenMalaria unix] page)
 
 = Building static binaries =
 
-To be able to build a static binary, you need to link the openMalaria executable to the carbon Framework. 
-For still unknown reasons it is *impossible to build a working static binary* with the cmake generated *xcode project* (although the carbon framework is added to the project and a linking step is specified for each target).
+For the static build, xerces needs to be linked with the Carbon Framework.
+In CMake you can add extra Linker parameters using CMAKE_EXE_LINKER_FLAGS and adding *-framework Carbon*
 
-It's possible to build a *working static build using Makefiles* (see the [UnixBuildOpenMalaria unix] page). *Please don't forget to check the option CMAKE_VERBOSE_MAKEFILE in cmake*. 
+You should have now properly compiling sources 
 
-During the make's linking phase the compiler will complain about undefined constants, because he doesn't link the binary with the carbon framework.
-
-You should expect to see some errors like:
-
-Undefined symbols:
-`"_`CFStringCreateMutableWithExternalCharactersNoCopy`"`, referenced from: xercesc_3_1::MacOSUnicodeConverter::upperCase(unsigned short`*`)in libxerces-c.a(MacOSUnicodeConverter.o)
-xercesc_3_1::MacOSUnicodeConverter::lowerCase(unsigned short`*`)in libxerces-c.a(MacOSUnicodeConverter.o)
-
-In the terminal, under the _ Linking CXX executable openMalaria _ message you will see something like that:
-
-`/usr/bin/c++    -Wl,-search_paths_first -headerpad_max_install_names -fPIC CMakeFiles/openMalaria.dir/model/openMalaria.cpp.o  -o openMalaria  -L/Users/africa/workspace/openmalaria_r885/trunk/build/xsdcxx model/libmodel.a ...`
-
-you should Copy this and add * -framework Carbon *, paste it, and finally execute it. 
-
-Finally you should have a working static build. 
 
 == Xcode ==
 
