Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@963 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/UnixBuildOpenMalaria.wiki
+++ b/wiki/UnixBuildOpenMalaria.wiki
@@ -58,7 +58,7 @@ Building Xerces-c 2.8:
 ./runConfigure -plinux -cgcc -xg++ -minmem -nsocket -tnative -rpthread -s -l-static-libgcc
 
 Building Xerces-c 3.1.1:	
-./configure --disable-shared -LDFLAGS=-static-libgcc
+./configure --disable-shared --disable-network LDFLAGS=-static-libgcc
 
 After this step you should be able to build a proper static openMalaria build. You still have to make sure that
 the openMalaria building process will use the static libstdc++. To ensure that, please pass the arguments *-static-libgcc -Wl,-Bstatic -lstdc++* to the linker. 
