Added a table of contents.
git-svn-id: https://openmalaria.googlecode.com/svn@988 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/XmlScenario.wiki
+++ b/wiki/XmlScenario.wiki
@@ -8,6 +8,9 @@ The main input to the simulator is an [http://www.w3schools.com/xml/default.asp 
 
 This documentation is intended to aid individuals editing scenario files, either by hand or with the scenario editor currently under development, by serving as a rough reference manual. It omits several details, which may be covered by the editor, but for use by hand it is recommended to refer to existing scenarios as guides.
 
+== Contents ==
+
+<wiki:toc max_depth="3" />
 
 = Scenario element =
 
