Added link to overview
git-svn-id: https://openmalaria.googlecode.com/svn@996 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -12,6 +12,7 @@
   * [BuildSystem Building and Testing]
 
 ===Model components===
+  * [ModelsOverview Overview]
   * [ModelTransmission Transmission models]
   * [ModelWithinHost Within-host models]
   * [ModelPathogenesis Models of morbidity and mortality]
