--- a/wiki/ModelsOverview.wiki
+++ b/wiki/ModelsOverview.wiki
@@ -2,6 +2,6 @@
 
 = Overview =
 
-The diagram below is a very-much simplified view of the models within the simulator and their interactions. It misses a lot of detail, and describes and positions some components differently to the code.
+The diagram below is a very-much simplified view of the models within the simulator and their interactions. It misses a lot of detail, and time delays, and many components don't have the same name as in the code.
 
-[http://code.google.com/p/openmalaria/source/browse/wiki/images/model-simple.png]
+http://openmalaria.googlecode.com/svn/wiki/images/model-simple.png
